# pocket2pocket

./: README.md  p2p.py  pyproject.toml  settings.py
src/pocket2pocket/: p2p.py
